Migrate to Gradle (#49)