@@ -4,10 +4,11 @@ import static net.kyori.adventure.text.Component.empty;
 import static net.kyori.adventure.text.Component.text;
 import static net.kyori.adventure.text.event.HoverEvent.showText;
 
-import java.util.*;
-import java.util.stream.Collectors;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.JoinConfiguration;
 import net.kyori.adventure.text.TextComponent;
@@ -22,6 +23,8 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
 import org.bukkit.permissions.PermissionAttachment;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import rip.bolt.ingame.Ingame;
 import rip.bolt.ingame.api.definitions.BoltMatch;
 import rip.bolt.ingame.api.definitions.MatchResult;
@@ -75,22 +78,19 @@ public class RankManager implements Listener {
   }
 
   public void handleMatchUpdate(
-      @Nonnull BoltMatch oldMatch, @Nonnull BoltMatch newMatch, Match match) {
+      @NonNull BoltMatch oldMatch, @NonNull BoltMatch newMatch, Match match) {
     tc.oc.pgm.api.match.MatchManager matchManager = PGM.get().getMatchManager();
 
-    List<RankUpdate> updates =
-        newMatch.getTeams().stream()
-            .map(Team::getParticipations)
-            .flatMap(Collection::stream)
-            .filter(Objects::nonNull)
-            .map(
-                participation ->
-                    new RankUpdate(
-                        oldMatch.getUser(participation.getUser().getUuid()),
-                        participation,
-                        matchManager.getPlayer(participation.getUser().getUuid())))
-            .filter(RankUpdate::isValid)
-            .collect(Collectors.toList());
+    List<RankUpdate> updates = newMatch.getTeams().stream()
+        .map(Team::getParticipations)
+        .flatMap(Collection::stream)
+        .filter(Objects::nonNull)
+        .map(participation -> new RankUpdate(
+            oldMatch.getUser(participation.getUser().getUuid()),
+            participation,
+            matchManager.getPlayer(participation.getUser().getUuid())))
+        .filter(RankUpdate::isValid)
+        .toList();
 
     match.callEvent(new MatchStatsEvent(match, true, true));
 
@@ -103,7 +103,7 @@ public class RankManager implements Listener {
   }
 
   public void notifyUpdate(
-      @Nonnull User old, @Nonnull Participation participation, @Nonnull MatchPlayer player) {
+      @NonNull User old, @NonNull Participation participation, @NonNull MatchPlayer player) {
     updatePlayer(player, player.getParty());
     User user = participation.getUser();
 
@@ -126,7 +126,7 @@ public class RankManager implements Listener {
     }
   }
 
-  public void updatePlayer(@Nonnull MatchPlayer mp, @Nullable Party party) {
+  public void updatePlayer(@NonNull MatchPlayer mp, @Nullable Party party) {
     Player player = mp.getBukkit();
     PermissionAttachment perm = PERMISSIONS.remove(player);
     BoltMatch match = manager.getMatch();
@@ -216,13 +216,9 @@ public class RankManager implements Listener {
     text.append(mmr(user)).append(text(") "));
 
     if (deafenPenalty != 0) {
-      text.append(
-          text("-" + deafenPenalty + " deafen penalty", NamedTextColor.RED)
-              .hoverEvent(
-                  showText(
-                      text(
-                          "Significant amount of time deafened in voice chat",
-                          NamedTextColor.GRAY))));
+      text.append(text("-" + deafenPenalty + " deafen penalty", NamedTextColor.RED)
+          .hoverEvent(showText(
+              text("Significant amount of time deafened in voice chat", NamedTextColor.GRAY))));
     }
 
     return text.build();
